# goit-pythonweb-hw-10

./: README.md  pyproject.toml
alembic/: env.py
alembic/versions/: d1ecf704d918_create_contacts_table.py
app/: config.py  main.py
app/api/: auth.py  contacts.py
app/crud/: contact.py
app/models/: contact.py  user.py
app/schemas/: user.py
app/services/: email.py
